--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Superstore Sales Descriptive Analysis</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                A descriptive analysis of existing Sales trend using a Superstore dataset.
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Python</li>
+                <li>Pandas</li>
+                <li>Matplotlib</li>
+                <li>Excel</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                <a href="" target="_blank" class="link__text">
+                  Visit <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/Rahma-Alam-Samiha/Superstore-Sales-Descriptive-Analysis/blob/main/Superstore_Sales_Descriptive_Analysis.ipynb" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
