--- a/index.html
+++ b/index.html
@@ -90,38 +90,39 @@
               </ul>
 
               <div class="work__links">
-                <a href="" target="_blank" class="link__text">
+                <a href="#" target="_blank" class="link__text">
                   Visit <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/Rahma-Alam-Samiha/Superstore-Sales-Descriptive-Analysis/blob/main/Superstore_Sales_Descriptive_Analysis.ipynb" title="View Source Code" target="_blank">
+                <a href="https://github.com/Rahma-Alam-Samiha/Superstore-Sales-Descriptive-Analysis/blob/main/Superstore_Sales_Descriptive_Analysis.ipynb"
+                  title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/DistributionofSales.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Time-Series Analysis of Air Passengers</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Time-series analysis of SNS Flight dataset
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Python</li>
+                <li>Matplotlib.js</li>
+                <li>Statsmomdel</li>
+                <li>Numpy</li>
               </ul>
 
               <div class="work__links">
                 <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                  Visit<span>&rarr;</span>
                 </a>
-                <a href="#">
+                <a
+                  href="https://github.com/Rahma-Alam-Samiha/Time-Series-Analysis-of-Air-Passengers-Data-SNS-Flights-dataset/blob/main/Time_Series_Analysis_of_Air_Passengers_Data_from_SNS_Flights_dataset.ipynb">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
