--- a/index.html
+++ b/index.html
@@ -128,22 +128,23 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/Time-seriesforecast.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>Credit Card Fraud Analysis</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Using CNN for credit card fraud analysis.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Python</li>
+                <li>Pandas</li>
+                <li>Tensorflow</li>
+                <li>Keras</li>
+                <li>Sklearn</li>
+                <li>Matplotlib</li>
               </ul>
 
               <div class="work__links">
