--- a/index.html
+++ b/index.html
@@ -151,13 +151,14 @@
                 <a href="#" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
+                <a
+                  href="https://github.com/Rahma-Alam-Samiha/CreditCardFraud-Analysis-CNN/blob/main/Credit_Card_Fraud_Analysis_CNN.ipynb">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/cnnmodelcreditcardfraud.png" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
