--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
               <div class="work__links">
                 <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                  Visit<span>&rarr;</span>
                 </a>
                 <a
                   href="https://github.com/Rahma-Alam-Samiha/CreditCardFraud-Analysis-CNN/blob/main/Credit_Card_Fraud_Analysis_CNN.ipynb">
