--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a responsible data analyst? Or looking for any kind of
+          Are you looking for a responsible and enthusiastic data analyst? Or looking for any kind of
           consultation? Or want to ask questions? Or have some advice for me
           or just want to say "Hi 👋" in any case feel free to Let me know. I
           will do my best to respond back. 😊 The quickest way to reach out to
