--- a/index.html
+++ b/index.html
@@ -191,10 +191,9 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              I am an undergradiate student at World University of Bangladesh with a major in
+              Computer Science and Engineering. Currently at my final semester on thesis. My
+              area of interest is Data Analysis and Data Science.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
