--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              I am an undergradiate student at World University of Bangladesh with a major in
+              I am an undergraduate student at World University of Bangladesh with a major in
               Computer Science and Engineering. Currently at my final semester on thesis. My
               area of interest is Data Analysis and Data Science.
             </p>
