--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="rahmaalam344@gmail.com" class="btn">rahmaalam344@gmail.com</a>
+        <a href="https://mail.google.com/mail/u/0/#inbox" class="btn">rahmaalam344@gmail.com</a>
       </div>
     </div>
   </section>
