--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Rahma Alam Samiha | A Data Analyst
+    Rahma Alam Samiha
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -59,7 +59,7 @@
           <span>Rahma Alam Samiha</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Data Analyst, Bangladesh.</p>
+        <p>Student at World University of Bangladesh.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
