--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <ul class="work__list">
                 <li>Python</li>
                 <li>Matplotlib.js</li>
-                <li>Statsmomdel</li>
+                <li>Stats-model</li>
                 <li>Numpy</li>
               </ul>
 
